--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Éxito </title>
+    <title>Éxito</title>
+    <h1>Hoy es viernes de cajas</h1>
 </head>
 <body>
     
